BATM-7516 Liquid bitcoin code improvements and tests